# smartpca_viz

./: .gitignore  OPTIMIZATION_PLAN.md  README.md  RELEASE_MANIFEST.sha256  REV4_REPRODUCTION.md  ancient.poplist  config.yaml  kde_heatmap.py  modern.poplist  pca.poplist  poplist.txt  pyproject.toml  requirements.txt  smartpca.eval  smartpca.evec  smartpca_viz.py
examples/: monk_targets.csv  rev4_config.yaml
examples/warring-states/: pca_interactive.html
smartpca_viz/: __init__.py  __main__.py  cli.py  config.py  exporter.py  kde_heatmap.py  model.py  palette.py  parser.py  render_html.py  render_matplotlib.py  render_pdf.py  warnings.py
smartpca_viz/templates/: __init__.py  app.js  base.html  styles.css
smartpca_viz/tests/: __init__.py  test_config.py  test_html_contract.py  test_parser.py  test_render_contract.py
